entregaRepository, statusEntrega, EntregaService

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,6 @@ Size=Must have max {1} caracters
 
 #para email da anotação @Email
 Email=Must be a well-formed email address
+
+#Mensagem para campo @NotNull
+NotNull=Fields  are Mandatory
